--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,16 +28,29 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  awesome_snackbar_content: ^0.1.0
   cupertino_icons: ^1.0.2
+  dotted_border: ^2.0.0+3
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.2.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  image_picker: ^0.8.6
+  intl: ^0.17.0
+  photo_manager: ^2.5.0
   provider: ^6.0.4
+  sqflite: ^2.2.0+3
+  table_calendar: ^3.0.8
 
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.2
+
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
