--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,17 +40,16 @@ dependencies:
   intl: ^0.17.0
   photo_manager: ^2.5.0
   provider: ^6.0.4
+  record: ^4.4.3
   sqflite: ^2.2.0+3
   table_calendar: ^3.0.8
 
 dev_dependencies:
+  build_runner: ^2.3.2
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.0
-  build_runner: ^2.3.2
-
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
