--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
   dotted_border: ^2.0.0+3
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^12.0.4
   flutter_localization: ^0.1.9
+  flutter_native_timezone: ^2.0.0
   font_awesome_flutter: ^10.2.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
@@ -42,6 +44,7 @@ dependencies:
   photo_manager: ^2.5.0
   provider: ^6.0.4
   record: ^4.4.3
+  rxdart: ^0.27.7
   sqflite: ^2.2.0+3
   table_calendar: ^3.0.8
 
@@ -56,7 +59,7 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-  generate: true 
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -65,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
