--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   awesome_snackbar_content: ^0.1.0
   cupertino_icons: ^1.0.2
   dotted_border: ^2.0.0+3
+  fl_chart: ^0.55.2
   flutter:
     sdk: flutter
   flutter_local_notifications: ^12.0.4
@@ -43,9 +44,11 @@ dependencies:
   intl: ^0.17.0
   photo_manager: ^2.5.0
   provider: ^6.0.4
+  quiver: ^3.1.0
   record: ^4.4.3
   rxdart: ^0.27.7
   sqflite: ^2.2.0+3
+  syncfusion_flutter_charts: ^20.3.59
   table_calendar: ^3.0.8
 
 dev_dependencies:
