--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_local_notifications: ^12.0.4
   flutter_localization: ^0.1.9
   flutter_native_timezone: ^2.0.0
+  flutter_svg: ^1.1.6
   font_awesome_flutter: ^10.2.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
