--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animated_snack_bar: ^0.3.0
+  another_flushbar: ^1.12.29
   awesome_snackbar_content: ^0.1.0
   cupertino_icons: ^1.0.2
   dotted_border: ^2.0.0+3
