--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   fl_chart: ^0.55.2
   flutter:
     sdk: flutter
+  flutter_cupertino_datetime_picker: ^3.0.0
   flutter_local_notifications: ^12.0.4
   flutter_localization: ^0.1.9
   flutter_native_timezone: ^2.0.0
@@ -45,6 +46,7 @@ dependencies:
   hive_flutter: ^1.1.0
   image_picker: ^0.8.6
   intl: ^0.17.0
+  month_year_picker: ^0.2.0+3
   photo_manager: ^2.5.0
   provider: ^6.0.4
   quiver: ^3.1.0
