--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: diary_app
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.0-389.0.dev <3.0.0'
+  sdk: ">=2.18.0-271.0.dev <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -32,6 +32,7 @@ dependencies:
   another_flushbar: ^1.12.29
   awesome_snackbar_content: ^0.1.0
   cupertino_icons: ^1.0.2
+  delta_markdown: ^0.8.0
   dotted_border: ^2.0.0+3
   fl_chart: ^0.55.2
   flutter:
@@ -40,19 +41,20 @@ dependencies:
   flutter_local_notifications: ^12.0.4
   flutter_localization: ^0.1.9
   flutter_native_timezone: ^2.0.0
+  flutter_quill: ^6.1.5
   flutter_svg: ^1.1.6
   font_awesome_flutter: ^10.2.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   image_picker: ^0.8.6
   intl: ^0.17.0
+  markdown: ^6.0.1
   month_year_picker: ^0.2.0+3
   photo_manager: ^2.5.0
   provider: ^6.0.4
   quiver: ^3.1.0
   record: ^4.4.3
   rxdart: ^0.27.7
-  sqflite: ^2.2.0+3
   syncfusion_flutter_charts: ^20.3.59
   table_calendar: ^3.0.8
 
