--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,15 @@ dependencies:
   flutter_localization: ^0.1.9
   flutter_native_timezone: ^2.0.0
   flutter_quill: ^6.1.5
+  flutter_quill_extensions: ^0.1.0
+  flutter_secure_storage: ^7.0.0
   flutter_share: ^2.0.0
   font_awesome_flutter: ^10.2.1
+  googleapis: ^9.2.0
+  googleapis_auth: ^1.3.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  http: ^0.13.5
   image_picker: ^0.8.6
   intl: ^0.17.0
   markdown: ^6.0.1
@@ -61,6 +66,8 @@ dependencies:
   share_plus: ^6.3.0
   syncfusion_flutter_charts: ^20.3.59
   table_calendar: ^3.0.8
+  tuple: ^2.0.1
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   build_runner: ^2.3.2
