--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   animated_snack_bar: ^0.3.0
+  animations: ^2.0.7
   another_flushbar: ^1.12.29
   carousel_slider: ^4.1.1
   cupertino_icons: ^1.0.2
