modify image and logo app

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 <!-- Optional, you'll have to check this permission by yourself. -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
    <application
-        android:label="diary_app"
+        android:label="MDiary"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
